// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatBox > renders DeepChat with history prop, PreWrittenQuestions, matches snapshot and checks history value 1`] = `
<div>
  <div
    class="chat-box-container"
  >
    <div
      class="log-notice"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 16 16"
        width="12"
      >
        <path
          d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
        />
      </svg>
      Les conversations sont enregistrées et consultées uniquement par David Vander Elst.
    </div>
    <div
      data-testid="deep-chat"
    >
      <span
        data-testid="history-present"
      >
        History loaded
      </span>
    </div>
  </div>
  <div
    data-testid="prewritten-questions"
  >
    PreWrittenQuestions
  </div>
</div>
`;

exports[`ChatBox - rendering > renders DeepChat with history and placeholder props, PreWrittenQuestions, matches snapshot and checks values 1`] = `
<div>
  <div
    class="chat-header"
  >
    <div
      class="chat-dot"
    />
    <div
      class="chat-header-title"
    >
      chatbot.virtualAvatar - translated
       — 
      John Doe
    </div>
    <div
      class="chat-header-sub"
      id="chat-status"
    >
      chatbot.status.online - translated
    </div>
  </div>
  <div
    class="chat-box-container"
  >
    <div
      class="log-notice"
    >
      <div
        data-testid="fa-triangle-exclamation"
      >
        FaTriangleExclamation
      </div>
       
      chatbot.messageLogWarning - translated
    </div>
    <div
      data-testid="deep-chat"
    >
      <div
        data-testid="history-values"
      >
        [{"role":"ai","text":"Hello!"}]
      </div>
      <div
        data-testid="placeholder-value"
      >
        chatbot.placeholder - translated
      </div>
    </div>
  </div>
  <div
    data-testid="prewritten-questions"
  >
    PreWrittenQuestions
  </div>
</div>
`;

exports[`ChatBox - rendering > renders DeepChat with history prop, PreWrittenQuestions, matches snapshot and checks history value 1`] = `
<div>
  <div
    class="chat-header"
  >
    <div
      class="chat-dot"
    />
    <div
      class="chat-header-title"
    >
      chatbot.virtualAvatartranslated
       — 
      John Doe
    </div>
    <div
      class="chat-header-sub"
      id="chat-status"
    >
      chatbot.status.onlinetranslated
    </div>
  </div>
  <div
    class="chat-box-container"
  >
    <div
      class="log-notice"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 16 16"
        width="12"
      >
        <path
          d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
        />
      </svg>
      chatbot.messageLogWarningtranslated
    </div>
    <div
      data-testid="deep-chat"
    >
      <span
        data-testid="history-present"
      >
        History loaded
      </span>
    </div>
  </div>
  <div
    data-testid="prewritten-questions"
  >
    PreWrittenQuestions
  </div>
</div>
`;
